--- a/.gitignore
+++ b/.gitignore
@@ -101,7 +101,10 @@ celerybeat.pid
 # SageMath parsed files
 *.sage.py
 .idea
-result.csv
+result*.csv
+
+.DS_Store
+~$*.xlsx
 
 # Environments
 .env
